--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "scripts": {
-    "start": "nodemon ."
-  },
-  "dependencies": {
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsdom": "^16.4.0"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "tabWidth": 4
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
-  }
+    "scripts": {
+        "start": "tsc && node ./dist",
+        "dev": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' --exec 'node --loader @k-foss/ts-esnode --experimental-specifier-resolution=node ./src/index.ts'"
+    },
+    "engines": {
+        "node": ">=14.0"
+    },
+    "dependencies": {
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "jsdom": "^16.4.0"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "tabWidth": 4
+    },
+    "devDependencies": {
+        "@k-foss/ts-esnode": "^1.7.0",
+        "@types/compression": "^1.7.0",
+        "@types/cors": "^2.8.8",
+        "@types/express": "^4.17.8",
+        "@types/jsdom": "^16.2.5",
+        "@types/node": "^14.14.6",
+        "nodemon": "^2.0.6",
+        "typescript": "^4.1.3"
+    }
 }
