--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "engines": {
         "node": ">=14.0"
     },
+    "type": "module",
     "dependencies": {
-        "compression": "^1.7.4",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "jsdom": "^16.4.0"
+        "axios": "^0.21.1",
+        "dotenv": "^8.2.0",
+        "telegraf": "^3.38.0"
     },
     "prettier": {
         "singleQuote": true,
@@ -18,10 +18,6 @@
     },
     "devDependencies": {
         "@k-foss/ts-esnode": "^1.7.0",
-        "@types/compression": "^1.7.0",
-        "@types/cors": "^2.8.8",
-        "@types/express": "^4.17.8",
-        "@types/jsdom": "^16.2.5",
         "@types/node": "^14.14.6",
         "nodemon": "^2.0.6",
         "typescript": "^4.1.3"
