--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "start": "tsc && node ./dist",
+        "start": "tsc && node --es-module-specifier-resolution=node ./dist",
         "dev": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' --exec 'node --loader @k-foss/ts-esnode --experimental-specifier-resolution=node ./src/index.ts'"
     },
     "engines": {
