--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dependencies": {
         "axios": "^0.21.1",
         "dotenv": "^8.2.0",
-        "telegraf": "^3.38.0"
+        "telegraf": "^3.38.0",
+        "typescript": "^4.1.3",
+        "@types/node": "^14.14.6"
     },
     "prettier": {
         "singleQuote": true,
@@ -18,8 +20,6 @@
     },
     "devDependencies": {
         "@k-foss/ts-esnode": "^1.7.0",
-        "@types/node": "^14.14.6",
-        "nodemon": "^2.0.6",
-        "typescript": "^4.1.3"
+        "nodemon": "^2.0.6"
     }
 }
