--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
         "start": "tsc && node --es-module-specifier-resolution=node ./dist",
-        "dev": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' --exec 'node --loader @k-foss/ts-esnode --experimental-specifier-resolution=node ./src/index.ts'"
+        "start:bot": "tsc && node --es-module-specifier-resolution=node ./dist/bot",
+        "send": "tsc && node --es-module-specifier-resolution=node ./dist/sendToMainChat"
     },
     "engines": {
         "node": ">=14.0"
