--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
         "node": ">=14.0"
     },
     "dependencies": {
+        "@types/node": "^14.14.6",
         "axios": "^0.21.1",
         "dotenv": "^8.2.0",
         "telegraf": "^3.38.0",
-        "typescript": "^4.1.3",
-        "@types/node": "^14.14.6"
+        "telegram-keyboard": "^2.1.7",
+        "typescript": "^4.1.3"
     },
     "prettier": {
         "singleQuote": true,
